--- a/HRC.html
+++ b/HRC.html
@@ -116,7 +116,7 @@
         <div class="row" style="margin-right:0;">
             <div class="col-md-4">
                 <div class="container-com">
-                    <img src="img/Heather Leung.jpeg" alt="" class="image">
+                    <img src="img/Heather Leung.jpg" alt="" class="image">
                     <div class="overlay">
                         <div class="text-com">Heather Leung</div>
                     </div>
