--- a/DIS.html
+++ b/DIS.html
@@ -116,7 +116,7 @@
         <div class="row" style="margin-right:0;">
             <div class="col-md-4">
                 <div class="container-com">
-                    <img src="img/img-person-placeholder.jpg" alt="" class="image">
+                    <img src="img/Sean Choi.jpg" alt="" class="image">
                     <div class="overlay">
                         <div class="text-com">Sean Choi</div>
                     </div>
